# Quriya-backend

./: .gitignore  alembic.ini  celery_app.py  main.py  nigerian_parties.json  populate_political_parties_db.py  populate_state_lga_ward_pu_db.py  pyproject.toml  test.db  try_out.py
alembic/: env.py
alembic/versions/: 727710f71b1d_add_agent_fields.py  790f9e004bec_incident_attached_to_polling_units.py  80e97b300b1d_set_agent_seq_to_not_null.py  cb72b696b03b_include_coverage_ids_in_relations.py  incident.py
src/auth/: schemas.py  security.py  services.py
src/core/: exceptions.py  pydantic_config.py
src/events/: __init__.py  base.py  bootstrap.py  bus.py  organization_events.py  user_events.py
src/models/: admin.py  base.py  customer.py  election_project.py  election_project_assigment.py  election_project_member.py  enums.py  incident.py  local_government_area.py  location.py  media.py  member_ward_coverage.py  org_party_style.py  organization.py  party_vote.py  political_party.py  polling_unit.py  project.py  project_assigment.py  project_lga_coverage.py  project_member.py  project_party_style.py  project_pu_coverage.py  project_state_coverage.py  project_ward_coverage.py  result.py  service_provider.py  state.py  user.py  ward.py
src/repositories/: base.py  election_project.py  election_project_member.py  incident.py  local_government_area.py  media.py  member_ward_coverage.py  organization.py  party_vote.py  political_party.py  polling_unit.py  project.py  project_assignment.py  project_lga_coverage.py  project_member.py  project_pu_coverage.py  result.py  (+5 more)
(+57 files in other folders)
